# PACE-2023

./: .gitignore  CMakeLists.txt  README.md  verifier.py
src/: main.cpp  parser.hpp
test/: CMakeLists.txt  parser_test.cpp
test/samples/: comments.gr  standard.gr
